$Id$

2004.03.17 [Olivier]
  * add GFile.filter#add_custom

2004.03.15 [Jacques]
  * allow destroying pixmaps manually
  * update GdkPixbuf support
  * PangoLayout corrections (incompatible with previous snapshot)

2004.03.10 [Olivier]
  * update several 2.4 widgets to the latest API (ComboBox, TreeView,
    FileChooser).
  * add a convenience function GTree.store_of_list
  * change the type of #iter_n_children and #iter_children in GTree.mdel

2004.03.05 [Olivier]
  * gtk_dialog->action_area is a GtkHButtonBox
  * add gtk_button_box_{set,get}_child_secondary (2.4)
  * misc. additions and cleanups in GPack.box and GPack.button_box

In lablgtk2-20040304:

2004.03.04 [Jacques]
  * fix dependencies in src/Makefile
  * fix #layout in GDraw.{drawable,pixmap}
  * fix typing problems in 3.06 and 3.07+14

2004.03.01 [Jacques]
  * add Pango.Layout and GDraw.drawable#layout

2004.02.29 [Olivier]
  * add Gobject.Data.caml to store caml values in GtkTreeModels.
  * add signal emitting gtk_tree_model_row_changed

2004.02.15 [Olivier]
  * change type of gdk_drag_status: argument is drag_action option
    instead of drag_action list

2004.01.27 [Jacques]
  * add GWindow.dialog_any (for glade)
  * restructure dialog code

2004.01.21 [Olivier]
  * GtkColorButton and GtkFontButton (2.4)

2004.01.15 [Olivier]
  * add gtk_tree_view_column_set_cell_data_func
  * log error messages if ml_gtktree callbacks raise exceptions
  * fix the types of some callbacks in GtkTreeSortable 
    and GtkTreeModelFilter

In lablgtk2-20040113:

2004.01.13 [Jacques]
  * revert to GWindow.window_skel/window
  * prepare snapshot

2004.01.08 [Olivier]
  * GtkTreeModel{Sort,Filter} fixes
  * added some missing GtkTreeModel methods
    (get_iter_first, iter_has_child, iter_n_children, flags, foreach)
  * in wrappers, added a function for converting a C flags value into
    a variant list (the reverse of the Make_Flags_val macro)

2004.01.04 [Olivier]
  * support for GtkEntryCompletion (2.4)
